--- a/css/main.css
+++ b/css/main.css
@@ -246,14 +246,81 @@ main {
   .projects {
     grid-template-columns: repeat(3, 1fr); } }
 
-@media screen and (max-width: 768px) {
-  main {
-    align-items: center;
-    text-align: center; }
-    main .lg-heading {
+@media screen and (min-width: 1024px) {
+  main .lg-heading {
+    line-height: 1;
+    margin-bottom: 1rem;
+    font-size: 5rem; }
+  ul.menu-nav,
+  div.menu-branding {
+    float: none;
+    width: 100%;
+    min-height: 0; }
+    ul.menu-nav.show,
+    div.menu-branding.show {
+      transform: translate3d(0, 0, 0); }
+  .menu-nav {
+    height: 75vh;
+    transform: translate3d(-100%, 0, 0); }
+    .menu-nav .nav-item .nav-link {
+      font-size: 20px; }
+  .menu-branding {
+    height: 25vh;
+    transform: translate3d(100%, 0, 0); }
+    .menu-branding .portrait {
+      background: url("../img/portrait_small.jpg") 140px 150px;
+      width: 130px;
+      height: 130px; }
+  #home {
+    padding-top: 60px; }
+    #home .lg-heading {
       line-height: 1;
       margin-bottom: 1rem;
+      font-size: 6rem; }
+    #home .sm-heading {
       font-size: 2rem; }
+  #about {
+    padding-top: 80px; }
+    #about .lg-heading {
+      line-height: 1;
+      margin-bottom: 1rem;
+      font-size: 3rem; }
+    #about .sm-heading {
+      font-size: 1.5rem; }
+    #about .about-info {
+      grid-template-areas: "bioimage" "bio" "job1" "job2" "job3";
+      grid-template-columns: 1fr; }
+      #about .about-info .bio-image {
+        width: 20%; }
+      #about .about-info .bio {
+        font-size: 0.9rem; }
+  #work {
+    padding-top: 80px; }
+    #work .lg-heading {
+      line-height: 1;
+      margin-bottom: 1rem;
+      font-size: 3rem; }
+    #work .sm-heading {
+      font-size: 1.5rem; }
+  .projects {
+    grid-template-columns: repeat(2, 1fr); }
+  #contact {
+    padding-top: 80px; }
+    #contact .lg-heading {
+      line-height: 1;
+      margin-bottom: 1rem;
+      font-size: 3rem; }
+    #contact .sm-heading {
+      font-size: 1.5rem; }
+    #contact .boxes div {
+      padding: 10px;
+      font-size: 1rem; } }
+
+@media screen and (max-width: 768px) {
+  main .lg-heading {
+    line-height: 1;
+    margin-bottom: 1rem;
+    font-size: 2.5rem; }
   ul.menu-nav,
   div.menu-branding {
     float: none;
