--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -45,6 +45,12 @@ $background-opacity: 0.9;
   }
 }
 
+@mixin mediaMdRotate {
+  @media screen and (min-width: 1024px) {
+    @content;
+  }
+}
+
 @mixin mediaMd {
   @media screen and (max-width: 768px) {
     @content;
