--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -12,16 +12,136 @@
   }
 }
 
-// Tablets & Small Laptops
-@include mediaMd {
+@include mediaMdRotate {
   main {
-    align-items: center;
-    text-align: center;
-
     .lg-heading {
       line-height: 1;
       margin-bottom: 1rem;
+      font-size: 5rem;
+    }
+  }
+
+  ul.menu-nav,
+  div.menu-branding {
+    float: none;
+    width: 100%;
+    min-height: 0;
+
+    &.show {
+      transform: translate3d(0, 0, 0);
+    }
+  }
+
+  .menu-nav {
+    height: 75vh;
+    transform: translate3d(-100%, 0, 0);
+    
+
+    & .nav-item .nav-link {
+      font-size: 20px;
+    }
+  }
+
+  .menu-branding {
+    height: 25vh;
+    transform: translate3d(100%, 0, 0);
+
+    .portrait {
+      background: url("../img/portrait_small.jpg") 140px 150px;
+      width: 130px;
+      height: 130px;
+    }
+  }
+
+  #home {
+    padding-top: 60px;
+    & .lg-heading {
+      line-height: 1;
+      margin-bottom: 1rem;
+      font-size: 6rem;
+    }
+
+    & .sm-heading {
       font-size: 2rem;
+    }
+  }
+
+  #about {
+    padding-top:: 80px;
+    & .lg-heading {
+      line-height: 1;
+      margin-bottom: 1rem;
+      font-size: 3rem;
+    }
+
+    & .sm-heading {
+      font-size: 1.5rem;
+    }
+
+    .about-info {
+      grid-template-areas:
+        "bioimage"
+        "bio"
+        "job1"
+        "job2"
+        "job3";
+
+      & .bio-image {
+        width: 20%;
+      }
+
+      grid-template-columns: 1fr;
+
+      .bio {
+        font-size: 0.9rem;
+      }
+    }
+  }
+
+  #work {
+    padding-top:: 80px;
+    & .lg-heading {
+      line-height: 1;
+      margin-bottom: 1rem;
+      font-size: 3rem;
+    }
+
+    & .sm-heading {
+      font-size: 1.5rem;
+    }
+  }
+
+  .projects {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  #contact {
+    padding-top:: 80px;
+    & .lg-heading {
+      line-height: 1;
+      margin-bottom: 1rem;
+      font-size: 3rem;
+    }
+
+    & .sm-heading {
+      font-size: 1.5rem;
+    }
+
+    & .boxes div {
+      padding: 10px;
+      font-size: 1rem;
+    }
+  }
+}
+
+
+// Tablets & Small Laptops
+@include mediaMd {
+  main {
+    .lg-heading {
+      line-height: 1;
+      margin-bottom: 1rem;
+      font-size: 2.5rem;
     }
   }
 
