--- a/css/main.css
+++ b/css/main.css
@@ -246,11 +246,11 @@ main {
   .projects {
     grid-template-columns: repeat(3, 1fr); } }
 
-@media screen and (min-width: 1024px) {
+@media screen and (max-width: 1024px) and (orientation: landscape) {
   main .lg-heading {
     line-height: 1;
     margin-bottom: 1rem;
-    font-size: 5rem; }
+    font-size: 4rem; }
   ul.menu-nav,
   div.menu-branding {
     float: none;
@@ -276,9 +276,9 @@ main {
     #home .lg-heading {
       line-height: 1;
       margin-bottom: 1rem;
-      font-size: 6rem; }
+      font-size: 3rem; }
     #home .sm-heading {
-      font-size: 2rem; }
+      font-size: 1.5rem; }
   #about {
     padding-top: 80px; }
     #about .lg-heading {
