--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -46,7 +46,7 @@ $background-opacity: 0.9;
 }
 
 @mixin mediaMdRotate {
-  @media screen and (min-width: 1024px) {
+  @media screen and (max-width: 1024px) and (orientation: landscape) {
     @content;
   }
 }
