--- a/scss/main.scss
+++ b/scss/main.scss
@@ -23,7 +23,7 @@ h3 {
   font-weight: 400;
 
   &.lg-heading {
-    font-size: 6rem;
+    font-size: 5rem;
   }
 
   &.sm-heading {
@@ -87,11 +87,12 @@ main {
     margin: auto;
     border-radius: 50%;
     border: $secondary-color 3px solid;
+    width: 60%;
   }
 
   .bio {
     grid-area: bio;
-    font-size: 1.5rem;
+    font-size: 1rem;
   }
 
   .job-1 {
