--- a/scss/main.scss
+++ b/scss/main.scss
@@ -35,6 +35,7 @@ h3 {
 
 a {
   color: #fff;
+  display: block;
   text-decoration: none;
 }
 
@@ -122,6 +123,7 @@ main {
 
   img {
     width: 100%;
+    min-height: 251px;
     border: 3px #fff solid;
 
     &:hover {
@@ -178,6 +180,7 @@ main {
   @extend .btn;
   background: darken($primary-color, 50);
   color: #fff;
+  cursor: unset;
 }
 
 .btn-light {
