--- a/scss/main.scss
+++ b/scss/main.scss
@@ -35,7 +35,6 @@ h3 {
 
 a {
   color: #fff;
-  display: block;
   text-decoration: none;
 }
 
@@ -121,6 +120,12 @@ main {
   grid-gap: 0.7rem;
   grid-template-columns: repeat(3, 1fr);
 
+  .item {
+    a {
+      display: block;
+    }
+  }
+
   img {
     width: 100%;
     min-height: 251px;
@@ -130,6 +135,14 @@ main {
       opacity: 0.5;
       border-color: $secondary-color;
       @include easeOut;
+    }
+  }
+
+  .link-projects {
+    display: flex;
+    justify-content: space-between;
+    a {
+      margin-bottom: 0;
     }
   }
 
