--- a/scss/main.scss
+++ b/scss/main.scss
@@ -128,8 +128,10 @@ main {
 
   img {
     width: 100%;
-    min-height: 251px;
     border: 3px #fff solid;
+    @media(min-width: 992px) {
+      min-height: 251px;
+    }
 
     &:hover {
       opacity: 0.5;
