Alteracao work tags para jobs

--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -98,7 +98,7 @@
     }
   }
 
-  #work {
+  #jobs {
     padding-top: 80px;
     & .lg-heading {
       line-height: 1;
@@ -227,7 +227,7 @@
     }
   }
 
-  #work {
+  #jobs {
     padding-top:: 60px;
     & .lg-heading {
       line-height: 1;
